[package]
name = "tug_of_ball"
version = "0.1.6"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = "0.6"
bevy_input = { git = "https://github.com/SecretPocketCat/bevy_input", features = [
    "multiplayer",
] }
bevy_extensions = { git = "https://github.com/SecretPocketCat/bevy_extensions" }
bevy_time = { git = "https://github.com/SecretPocketCat/bevy_time" }
# serde = { version = "1.0.130", features = ["derive"] }
rand = "0.8.5"
bevy_tweening = "0.3.2"
bevy_prototype_lyon = "0.4.0"
interpolation = "0.2.0"
bevy-inspector-egui = { version = "0.8.2" }
heron = { version = "2.0.1", features = ["2d"] }
big-brain = "0.10.0"

[features]
debug = []
collision_debug = ["heron/debug-2d"]
release = []
