[package]
name = "tug_of_ball"
version = "0.1.6"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bevy_input = { git = "https://github.com/SecretPocketCat/bevy_input", features = [
    "multiplayer",
] }
bevy_extensions = { git = "https://github.com/SecretPocketCat/bevy_extensions" }
bevy_time = { git = "https://github.com/SecretPocketCat/bevy_time" }
bevy-inspector-egui = { version = "0.9.0" }
rand = "0.8.5"
bevy_tweening = "0.3.2"
bevy_prototype_lyon = "0.4.0"
interpolation = "0.2.0"
heron = { version = "2.0.1", features = ["2d"] }
big-brain = "0.10.0"

[dependencies.bevy]
version = "0.6"
default-features = false
# https://bevy-cheatbook.github.io/setup/bevy-config.html?highlight=audio#bevy-cargo-features
# These are the remaining default features other than `bevy_audio` and `mp3`
features = [
    "bevy_winit",
    "bevy_gilrs",
    "png",
    "filesystem_watcher",
    "x11",
    # render-related features
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
]

[dependencies.bevy_kira_audio]
version = "0.8.0"
# `ogg` format support is enabled by default, disable if you don't want it
default-features = false
# enable the features you care about
features = ["mp3", "ogg"]

[features]
debug = []
collision_debug = ["debug", "heron/debug-2d"]
release = []
